----
MVDSV v0.176 build 1787 (2004.11.11)
[server]
- bugfix: didn't display *.mvd.gz files by cmd dlist and cmd demolist commands
- added message "Download stopped." if file downloading was stoped by cmd stopdownload
- bugfix: removed packet loss if file downloading was stoped by cmd stopdownload
- added command cmd stopdl - work same as cmd stopdownload
- added message "Download completed." after file download was completed by commands download,
  cmd download or cmd dl
- bugfix: added check for buffer overflow in demo-writing
(Thanks to SD-Angel)
[win32]
- bugfix: incorrect file sorting by date in Sys_listdir function
[unix]
- file ./build was replaced to ./configure
- merged and optimized Makefile-s for mvdsv and qwdtools
- bugfix: fixed Makefile.FreeBSD for making for Darwin/Mac OS X


----
MVDSV v0.175 build 1773
- changed all WIN32 and WINDOWS defines to _WIN32
- win32 projects cleaned up
- check define LITTLE_ENDIAN changed to check define __BIG_ENDIAN__ and dynamical determination of
  LITTLE/BIG ENDIAN changed to staticaly (removed variable qboolean bigendien)
[server]
- bugfix from 0.174b: crashed when server demo record started
- added Darwin/Mac OS X targets (by Baalz)
- extension in cvar sv_specprint <flags>, <flags> is sum of:
    1 - single print to a specific client to the center of the screen (centerprint)
    2 - single print to a specific client (sprint)
    4 - sends text over to the client's execution buffer (stuffcmd)
    default: 0
  players can setinfo sp <flags> to turn it off for themselves:
  if required field is not set then this type of print is off; default sp = sv_specprint
  (for example setinfo sp 1 - turns off sprint and stuffcmd)
- new connectionless command lastscores - work same as cmd lastscores (see changes to v0.1728)
  (for example, can be used as: packet server:port "lastscores 5")
[unix]
- added determination of gcc version in FreeBSD in Makefile
[qwdtools]