@@ -27,7 +27,7 @@
 		59 Temple Place - Suite 330
 		Boston, MA  02111-1307, USA
 
-	$Id: cl_slist.h,v 1.1.1.5 2004/11/11 16:34:54 vvd0 Exp $
+	$Id: cl_slist.h,v 1.1.1.6 2004/11/18 19:09:16 vvd0 Exp $
 */
 
 // #include <quakeio.h>
