@@ -24,7 +24,7 @@
 		59 Temple Place - Suite 330
 		Boston, MA  02111-1307, USA
 
-	$Id: mdfour.c,v 1.1.1.5 2004/11/11 16:35:05 vvd0 Exp $
+	$Id: mdfour.c,v 1.1.1.6 2004/11/18 19:09:26 vvd0 Exp $
 */
 
 #include <string.h>		/* XoXus: needed for memset call */
