@@ -6,7 +6,7 @@
 --------------------Configuration: qwsv - Win32 Release--------------------
 </h3>
 <h3>Command Lines</h3>
-Creating temporary file "c:\Temp\RSP2D.bat" with contents
+Creating temporary file "c:\Temp\RSP2204.bat" with contents
 [
 @echo off
 cl /nologo /EP > .\SRelease\worlda.spp .\worlda.s
@@ -14,8 +14,8 @@ gas2masm < .\SRelease\worlda.spp >.\SRelease\worlda.asm
 ml /nologo /c /Cp /coff /Fo.\SRelease\worlda.obj /Zm /Zi                 .\SRelease\worlda.asm
 del .\SRelease\worlda.spp
 ]
-Creating command line "c:\Temp\RSP2D.bat"
-Creating temporary file "c:\Temp\RSP2E.bat" with contents
+Creating command line "c:\Temp\RSP2204.bat"
+Creating temporary file "c:\Temp\RSP2205.bat" with contents
 [
 @echo off
 cl /nologo /EP > .\SRelease\math.spp .\math.s
@@ -23,7 +23,7 @@ gas2masm < .\SRelease\math.spp >.\SRelease\math.asm
 ml /nologo /c /Cp /coff /Fo.\SRelease\math.obj /Zm /Zi                 .\SRelease\math.asm
 del .\SRelease\math.spp
 ]
-Creating command line "c:\Temp\RSP2E.bat"
+Creating command line "c:\Temp\RSP2205.bat"
 Creating command line "rc.exe /l 0x409 /fo".\SRelease/winquake.res" /d "NDEBUG" "H:\q\Projects\mvdsv\mvdsv\source\winquake.rc"" 
 Performing Custom Build Step on .\worlda.s
 worlda.s
@@ -31,7 +31,7 @@ worlda.s
 Performing Custom Build Step on .\math.s
 math.s
  Assembling: .\SRelease\math.asm
-Creating temporary file "c:\Temp\RSP2F.tmp" with contents
+Creating temporary file "c:\Temp\RSP2206.tmp" with contents
 [
 /nologo /G6 /Zp4 /ML /W3 /GX /O1 /Op /D "SERVERONLY" /D "id386" /D "NDEBUG" /Fr".\SRelease/" /Fp".\SRelease/mvdsv.pch" /YX /Fo".\SRelease/" /Fd".\SRelease/" /FD /c 
 "H:\q\Projects\mvdsv\mvdsv\source\cmd.c"
@@ -66,8 +66,8 @@ Creating temporary file "c:\Temp\RSP2F.tmp" with contents
 "H:\q\Projects\mvdsv\mvdsv\source\world.c"
 "H:\q\Projects\mvdsv\mvdsv\source\zone.c"
 ]
-Creating command line "cl.exe @c:\Temp\RSP2F.tmp" 
-Creating temporary file "c:\Temp\RSP30.tmp" with contents
+Creating command line "cl.exe @c:\Temp\RSP2206.tmp" 
+Creating temporary file "c:\Temp\RSP2207.tmp" with contents
 [
 wsock32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib winmm.lib /nologo /subsystem:windows /incremental:no /pdb:".\SRelease/mvdsv-current.pdb" /machine:I386 /out:"..\mvdsv-current.exe" 
 .\SRelease\cmd.obj
@@ -105,7 +105,7 @@ wsock32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32
 .\SRelease\math.obj
 .\SRelease\worlda.obj
 ]
-Creating command line "link.exe @c:\Temp\RSP30.tmp"
+Creating command line "link.exe @c:\Temp\RSP2207.tmp"
 <h3>Output Window</h3>
 Compiling resources...
 Compiling...
@@ -141,7 +141,7 @@ version.c
 world.c
 zone.c
 Linking...
-Creating temporary file "c:\Temp\RSP32.tmp" with contents
+Creating temporary file "c:\Temp\RSP2209.tmp" with contents
 [
 /nologo /o".\SRelease/mvdsv.bsc" 
 .\SRelease\cmd.sbr
@@ -175,7 +175,7 @@ Creating temporary file "c:\Temp\RSP32.tmp" with contents
 .\SRelease\version.sbr
 .\SRelease\world.sbr
 .\SRelease\zone.sbr]
-Creating command line "bscmake.exe @c:\Temp\RSP32.tmp"
+Creating command line "bscmake.exe @c:\Temp\RSP2209.tmp"
 Creating browse info file...
 <h3>Output Window</h3>
 
