@@ -23,7 +23,7 @@
 		59 Temple Place - Suite 330
 		Boston, MA  02111-1307, USA
 
-	$Id: r_drawa.s,v 1.1.1.5 2004/11/11 16:35:21 vvd0 Exp $
+	$Id: r_drawa.s,v 1.1.1.6 2004/11/18 19:09:40 vvd0 Exp $
 */
 // r_drawa.s
 // x86 assembly-language edge clipping and emission code
