@@ -23,7 +23,7 @@
 		59 Temple Place - Suite 330
 		Boston, MA  02111-1307, USA
 
-	$Id: surf8.s,v 1.1.1.5 2004/11/11 16:35:26 vvd0 Exp $
+	$Id: surf8.s,v 1.1.1.6 2004/11/18 19:09:43 vvd0 Exp $
 */
 // surf8.s
 // x86 assembly-language 8 bpp surface block drawing code.
